--- a/Ajerly Platform/Views/Shared/_Layout.cshtml
+++ b/Ajerly Platform/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 <nav class="custom-navbar">
     <div class="nav-right">
         <button class="btn-run" onclick="location.href='@Url.Action("Index","Home")'">
-            <span class="icon">✏️</span>
+            <img src="~/images/logo.svg" alt="Ajerly" class="site-logo" />
           اجرلي
         </button>
     </div>
